--- a/content/TD/02-exercice2.html
+++ b/content/TD/02-exercice2.html
@@ -17,7 +17,7 @@ bibliography: "../../static/bib/references.bib"
 
 
 
-<p>On considère les réalisations <span class="math inline">\(\boldsymbol{x} = \{x_1,\ldots,x_n\}\)</span> d’une suite de variables aléatoires <span class="math inline">\(iid\)</span> <span class="math inline">\(\{X_i\}_{i=1, \dots, n}\)</span> positives suivant une loi exponentielle de paramètre <span class="math inline">\(\lambda\)</span> : <span class="math inline">\(\mathcal{E}(\lambda)\)</span>,
+<p>On observe les réalisations <span class="math inline">\(\boldsymbol{x} = \{x_1,\ldots,x_n\}\)</span> d’une suite de variables aléatoires <span class="math inline">\(iid\)</span> <span class="math inline">\(\{X_i\}_{i=1, \dots, n}\)</span> positives suivant une loi exponentielle de paramètre <span class="math inline">\(\lambda\)</span> : <span class="math inline">\(\mathcal{E}(\lambda)\)</span>,
 où <span class="math inline">\(\lambda&gt;0\)</span> est inconnu et on cherche à l’estimer.</p>
 <p>On rappelle la densité de probabilité pour la distribution exponentielle : <span class="math inline">\(f_\lambda(x) = \lambda e^{-\lambda x}\)</span> pour <span class="math inline">\(x&gt;0\)</span>.</p>
 <p>On utilise comme loi <em>a priori</em> sur <span class="math inline">\(\lambda\)</span> la loi Gamma <span class="math inline">\(\mathcal G(\alpha,\beta)\)</span> dont la densité s’écrit :
