--- a/content/TD/03-exercice3.html
+++ b/content/TD/03-exercice3.html
@@ -69,16 +69,17 @@ p(\theta | \boldsymbol{x})\quad  \propto  \quad  e^{-\theta} (\theta+1)^n \prod_
 <li>Étape d’acceptation-rejet de <span class="math inline">\(y^{(t)}\)</span>
 <ul>
 <li>Générer aléatoirement <span class="math inline">\(u^{(t)}\)</span> à partir de la loi <span class="math inline">\(U[0;1]\)</span></li>
-<li><span class="math inline">\(\theta^{(t)} := \left\{ \begin{array}{l} y^{(t)} \text{ si } u_t \leq \alpha^{(t)} \\ \theta^{(t-1)} \text{ sinon} \end{array} \right.\)</span></li>
+<li><span class="math inline">\(\theta^{(t)} := \left\{ \begin{array}{l} y^{(t)} \text{ si } u^{(t)} \leq \alpha^{(t)} \\ \theta^{(t-1)} \text{ sinon} \end{array} \right.\)</span></li>
 </ul></li>
 </ol></li>
 </ol>
 </div>
 <p>On détaille maintenant le calcul de la probabilité d’acceptation :
-<span class="math display">\[\alpha^{(t)} = min \left( 1, \frac{p(y^{(t)} | \boldsymbol{x})}{p(\theta^{(t-1)} | \boldsymbol{x})}\frac{\pi(\theta^{(t-1)})}{\pi(y)} \right)\]</span></p>
+<span class="math display">\[\alpha^{(t)} = min \left( 1, \frac{p(y^{(t)} | \boldsymbol{x})}{p(\theta^{(t-1)} | \boldsymbol{x})}\frac{\pi(\theta^{(t-1)})}{\pi(y^{(t)})} \right)\]</span></p>
 <p><span class="math display">\[\begin{align*}
-          \dfrac{p(y^{(t)} | \boldsymbol{x})}{p(\theta^{(t-1)} | \boldsymbol{x})}\dfrac{\pi(\theta^{(t-1)})}{\pi(y)} &amp; = \dfrac{p(y | \boldsymbol{x})}{p(\theta^{(t-1)} | \boldsymbol{x})}\dfrac{e^{-\theta^{(t-1)}}}{e^{-y}} \\
-          &amp;  = \dfrac{(y +1)^n(\prod_{i=1}^n x_i^{-y}) e^{-y}}{(\theta^{(t-1)}+1)^n\left(\prod_{k=1}^n x_i^{-\theta^{(t-1)} }\right)e^{-\theta^{(t-1)}}}\dfrac{e^{-\theta^{(t-1)}}}{e^{-y}}
+\require{cancel}
+          \dfrac{p(y^{(t)} | \boldsymbol{x})}{p(\theta^{(t-1)} | \boldsymbol{x})}\dfrac{\pi(\theta^{(t-1)})}{\pi(y^{(t)})} &amp; = \dfrac{p(y^{(t)} | \boldsymbol{x})}{p(\theta^{(t-1)} | \boldsymbol{x})}\dfrac{e^{-\theta^{(t-1)}}}{e^{-y^{(t)}}} \\
+          &amp;  = \dfrac{(y^{(t)} +1)^n(\prod_{i=1}^n x_i^{-y^{(t)}})\cancel{e^{-y^{(t)}}}}{(\theta^{(t-1)}+1)^n\left(\prod_{k=1}^n x_i^{-\theta^{(t-1)} }\right)\cancel{e^{-\theta^{(t-1)}}}}\dfrac{\cancel{e^{-\theta^{(t-1)}}}}{\cancel{e^{-y^{(t)}}}}
 \end{align*}\]</span></p>
 <p>Finalement <span class="math inline">\(\alpha = min \left( 1, \dfrac{(y +1)^n \prod_{i=1}^n x_i^{-y}}{(\theta^{(t-1)} +1)^n \prod_{k=1}^n x_i^{-\theta^{(t-1)} }} \right)\)</span></p>
 <p>Cet algorithme échantillonne alors selon la loi <em>a posteriori</em> du paramètre <span class="math inline">\(\theta\)</span> :</p>
