--- a/content/TD/01-exercice1.html
+++ b/content/TD/01-exercice1.html
@@ -69,7 +69,7 @@ où <span class="math inline">\(h(\boldsymbol{y},\sigma)\)</span> ne dépend pas
 <li>Écrire la dérivée première et seconde de la log-vraisembance par rapport à <span class="math inline">\(\theta\)</span> et l’information de Fisher pour <span class="math inline">\(\theta\)</span>.</li>
 </ol>
 <div class="Correction">
-<p>La dérivée seconde de f(|) par rapport à <span class="math inline">\(\theta\)</span> est: <span class="math inline">\(-n/\sigma^2\)</span>.</p>
+<p>La dérivée seconde de <span class="math inline">\(\log f(\boldsymbol{y}|\theta)\)</span> par rapport à <span class="math inline">\(\theta\)</span> est: <span class="math inline">\(-n/\sigma^2\)</span>.</p>
 <p>Cette quantité ne dépend pas de <span class="math inline">\(\boldsymbol{y} =\{y_1,\dots,y_n\}\)</span>, on obtient donc directement : <span class="math inline">\(I(\theta)=n/\sigma^2\)</span>.</p>
 </div>
 <p><br></p>
