--- a/content/practicals/02-inverseTransfoQuestions.html
+++ b/content/practicals/02-inverseTransfoQuestions.html
@@ -2,7 +2,7 @@
 title: "Exercise 2 : Méthode d'échantillonnage de la fonction inverse"
 linktitle: "Exercice 2 : Fonction inverse"
 date: "2020-11-30"
-read_date: "2020-12-07"
+exo_date: "2020-12-07"
 menu:
   practicals:
     parent: "TP"
