--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -40,73 +40,73 @@ slug: schedule
 <td align="left"><strong>Lundi 30 novembre</strong></td>
 <td align="left">14h-17h</td>
 <td align="left">📹 👨‍💻 Présentation du cours</td>
-<td align="left">Chapitre I</td>
+<td align="left"><a href="/cours/02-intro/">Chapitre I</a></td>
 </tr>
 <tr class="even">
 <td align="left"><strong>Mardi 1er décembre</strong></td>
 <td align="left">14h-16h</td>
 <td align="left">🎬 🍿 📖 Visionnage des vidéos et lectures des notes en autonomie</td>
-<td align="left">Chapitres I &amp; II</td>
+<td align="left"><a href="/cours/02-intro/">Chapitres I &amp; II</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">16h15-17h</td>
 <td align="left">📹 👨‍💻 ❓ Zoom questions-réponses</td>
-<td align="left">Chapitres I &amp; II</td>
+<td align="left"><a href="/cours/04-modfreq/">Chapitres I &amp; II</a></td>
 </tr>
 <tr class="even">
 <td align="left"><strong>Mercredi 2 décembre</strong></td>
 <td align="left">9h-9h45</td>
 <td align="left">📜 🖊 TD en autonomie</td>
-<td align="left">Exercice 1</td>
+<td align="left"><a href="/td/01-exercice1/">Exercice 1</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">10h-10h30</td>
 <td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
-<td align="left">Exercice 1</td>
+<td align="left"><a href="/td/01-exercice1/">Exercice 1</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">10h30pm- 11h15</td>
 <td align="left">📜 🖊 TD en autonomie</td>
-<td align="left">Exercice 2</td>
+<td align="left"><a href="/td/02-exercice2/">Exercice 2</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">11h30-12h</td>
 <td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
-<td align="left">Exercice 2</td>
+<td align="left"><a href="/td/02-exercice2/">Exercice 2</a></td>
 </tr>
 <tr class="even">
 <td align="left"><strong>Jeudi 3 décembre</strong></td>
 <td align="left">9h-11h</td>
 <td align="left">🎬 🍿 📖 Visionnage des vidéos et lectures des notes en autonomie</td>
-<td align="left">Chapitre III</td>
+<td align="left"><a href="/cours/10-diffposterior/">Chapitre III</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">11h15-12h</td>
 <td align="left">📹 👨‍💻 ❓ Zoom questions-réponses</td>
-<td align="left">Chapitre III</td>
+<td align="left"><a href="/cours/10-diffposterior/">Chapitre III</a></td>
 </tr>
 <tr class="even">
 <td align="left"><strong>Vendredi 4 décembre</strong></td>
 <td align="left">14h-14h45</td>
 <td align="left">📜 🖊 TD en autonomie</td>
-<td align="left">Exercice 3</td>
+<td align="left"><a href="/td/03-exercice3/">Exercice 3</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">15h-15h30</td>
 <td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
-<td align="left">Exercice 3</td>
+<td align="left"><a href="/td/03-exercice3/">Exercice 3</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">15h30pm- 16h15</td>
 <td align="left">📜 🖊 TD en autonomie</td>
-<td align="left">Exercice 4</td>
+<td align="left"><a href="/td/04-exercice4/">Exercice 4</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
@@ -118,13 +118,13 @@ slug: schedule
 <td align="left"><strong>Lundi 7 décembre</strong></td>
 <td align="left">14h-17h</td>
 <td align="left">💻 📹 🗣 👥 Travaux pratiques en <em>break-out rooms</em> sur zoom</td>
-<td align="left">• Exercice 1: “Monte-Carlo” <br> • Exercice 2: “Transformée inverse” <br> • Exercice 3: “Metropolis-Hastings”</td>
+<td align="left">• <a href="/practicals/01-piMCestimateQuestions/">Exercice 1: “Monte-Carlo”</a> <br> • <a href="/practicals/02-inverseTransfoQuestions/">Exercice 2: “Transformée inverse”</a> <br> • <a href="/practicals/03-mhquestions/">Exercice 3: “Metropolis-Hastings”</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><strong>Mardi 8 décembre</strong></td>
 <td align="left">9h-12h</td>
 <td align="left">💻 📹 🗣 👥 Travaux pratiques en <em>break-out rooms</em> sur zoom</td>
-<td align="left">• Exercice 3: “Metropolis-Hastings” <br> • Exercice 4: “<code>BUGS</code> &amp; <code>JAGS</code>”</td>
+<td align="left">• <a href="/practicals/03-mhquestions/">Exercice 3: “Metropolis-Hastings”</a> <br> • <a href="/practicals/04-JAGSstart/">Exercice 4: “<code>BUGS</code> &amp; <code>JAGS</code>”</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
